fixed div width to prevent overlap

--- a/cs4280asg2/web/css/style.css
+++ b/cs4280asg2/web/css/style.css
@@ -45,7 +45,7 @@ a
 
 #leftPanel
 {
-    width: 20%;
+    width: 200px;
     height: 100%;
     background-color: #EAF5FF;
     float: left;
@@ -71,7 +71,7 @@ a
 {
     float: left;
     margin-top: 30px;
-    margin-left: 25%;
+    margin-left: 250px;
     padding-top: 20px;
     width: 75%;
 }
@@ -79,7 +79,8 @@ a
 .contentItem
 {
     text-align: center;
-    width: 33%;
+    padding: 1%;
+    width: 280px;
     float: left;
 }
 
